# pane-navigator

./: CMakeLists.txt  README.md  setup.sh
src/: common.c  i3.c  main.c  nvim.c  tmux-nav.sh  tmux.c  x11.c
src/include/: common.h  i3.h  nvim.h  tmux.h  x11.h
